--- a/conteudo/unidadepalavra/1.html
+++ b/conteudo/unidadepalavra/1.html
@@ -1553,6 +1553,307 @@
                     </div>
                 </p>
 
+
+
+                <p style="text-align: center; font-weight: bold;">
+                    DESEJO (CECÍLIA MEIRELESS)
+                </p>
+                <p style="font-weight: bold;">
+	                UM MENINO ME CONTOU QUE TINHA UM DESEJO IMENSO DE MORAR NO FUNDO DAS ÁGUAS. SERIA TÃO BONITO! ELE VERIA DE PERTO OS PEIXES DE TODAS AS CORES, PASSANDO... E TERIA UM PALÁCIO FEITO DE CORAL E DE CONCHAS... ANDARIA VESTIDO DE UMA ROUPA DE ESPUMAS. SERIA PRÍNCIPE.
+                </p>
+                <p style="font-weight: bold;">
+                    DE NOITE, QUANDO OS HOMENS NÃO PRECISASSEM MAIS DE SOL, FARIA UMA LÂMPADA, POUSANDO-A NA SALA MAIS RICA DO SEU PALÁCIO. E HAVERIA SEMPRE LUZ NO FUNDO DAS ÁGUAS... DEPOIS O MENINO PENSOU, E DISSE:
+                </p>
+                <p style="font-weight: bold;">
+                    - TALVEZ A MAMÃEZINHA FICASSE TRISTE, SEM MIM.
+                </p>
+                <p style="font-weight: bold;">
+                    - E QUE FARIAS TU? PERGUNTEI-LHE.
+                </p>
+                <p style="font-weight: bold;">
+                    - EU CHAMARIA ALGUÉM QUE NÃO TIVESSE MÃE, NEM NINGUÉM QUE FICASSE TRISTE, DAR-LHE-IA O PALÁCIO, AS ÁGUAS, O SOL, E DIRIA: - TOMA TUDO ISTO, QUE PARA MIM NÃO TEM VALOR, PORQUE NÃO HÁ SÓIS, NEM ÁGUAS, NEM PALÁCIOS QUE VALHAM O CONTENTAMENTO DA MAMÃE.
+                </p>
+                <p>
+                    <b>COMPREENSÃO DA LEITURA</b>(faça oralmente, após a leitura em voz alta)
+                </p>
+                <p style="text-indent: 0 !important; margin-left: 5%;">
+                    - Quem escreveu o conto?</br>
+                    - Qual era o maior desejo do menino? Onde ele gostaria de morar?- Como seria?</br>
+                    - O que o menino gostaria de ser?</br>
+                    - Príncipes ainda existem? Você conhece algum?</br>
+                    - Liste os países em que existem príncipes?</br>
+                    - O que o menino pensou depois? Ele estava satisfeito com a sua ideia? Por que não?</br>
+                    - Quem ele chamaria para morar no palácio em seu lugar?</br>
+                    - O que ele faria depois? Por quê?</br>
+                </p>
+
+
+                <p style="text-indent: 0 !important; margin-left: 5%;">
+                    Marque no texto as palavras que você já sabe ler.<br/>
+                    Copie em seu caderno as palavras que você marcou.<br/>
+                    Retire do conto os nomes que das coisas que existem no mar.<br/>
+                    Leia<br/>
+                </p>
+
+                <p>
+                    <span style="color: blue;">PER</span>TO
+                </p>
+
+                <p style="text-indent: 0 !important; margin-left: 5%;">
+                    Pesquise outros nomes que contenham as sílabas destacadas e cole no quadro. Depois copie no seu caderno.
+                    <div style="border: 1px solid black; width: 80%; height: 15rem; margin-left: 5%;">
+
+                    </div>
+                </p>
+
+                <p>
+                    Substitua o <b>P</b> por <b>C</b>, substitua <b>E por A, O por A,</b> e encontre nova palavra. Depois 
+                    copie no seu caderno.
+                </p>
+
+
+                <p>
+                    <b>AS COISAS QUE EU DESEJO</b>
+                </p>
+
+                <p style="text-indent: 0 !important; margin-left: 5%;">
+                    <b>
+                        NÓS SEMPRE ESTAMOS INSATISFEITOS COM O QUE SOMOS OU COM O QUE TEMOS, NÃO É VERDADE? ASSIM, QUE REALIZAMOS UM DESEJO, LOGO VEM OUTRO DESEJO, MAIS OUTRO, E MAIS OUTRO... NÓS SEMPRE ESTAMOS INSATISFEITOS COM O QUE SOMOS OU COM O QUE TEMOS, NÃO É VERDADE? ASSIM, QUE REALIZAMOS UM DESEJO, LOGO VEM OUTRO DESEJO, MAIS OUTRO, E MAIS OUTRO... 
+                    </b>
+                </p>
+
+                <p>
+                    ESCREVA 5 DESEJOS QUE GOSTARIA DE REALIZAR.
+                    <div style="display: flex; width: 80%; margin-left: 5%;  justify-content: space-between;">
+                        <div style="display: flex; border-bottom: 1px solid black; width: 100%;">
+                            &nbsp;
+                        </div>
+                    </div>
+                    <div style="display: flex; width: 80%; margin-left: 5%;  justify-content: space-between;">
+                        <div style="display: flex; border-bottom: 1px solid black; width: 100%;">
+                            &nbsp;
+                        </div>
+                    </div>
+                    <div style="display: flex; width: 80%; margin-left: 5%;  justify-content: space-between;">
+                        <div style="display: flex; border-bottom: 1px solid black; width: 100%;">
+                            &nbsp;
+                        </div>
+                    </div>
+                </p>
+
+                <p>
+                    DOS DESEJOS QUE VOCÊ LISTOU, QUAL O QUE MAIS DESEJA REALIZAR?
+                    <div style="display: flex; width: 80%; margin-left: 5%;  justify-content: space-between;">
+                        <div style="display: flex; border-bottom: 1px solid black; width: 100%;">
+                            &nbsp;
+                        </div>
+                    </div>
+                    <div style="display: flex; width: 80%; margin-left: 5%;  justify-content: space-between;">
+                        <div style="display: flex; border-bottom: 1px solid black; width: 100%;">
+                            &nbsp;
+                        </div>
+                    </div>
+                    <div style="display: flex; width: 80%; margin-left: 5%;  justify-content: space-between;">
+                        <div style="display: flex; border-bottom: 1px solid black; width: 100%;">
+                            &nbsp;
+                        </div>
+                    </div>
+                </p>
+
+                <p style="text-indent: 0 !important; margin-left: 5%;">
+                    EXISTEM COISAS PARA QUAIS DAMOS MUITO IMPORTÂNCIA, JÁ PARA OUTRAS NEM TANTO. EXISTEM COISAS PARA QUAIS DAMOS MUITO IMPORTÂNCIA, JÁ PARA OUTRAS NEM TANTO
+                </p>
+
+
+                <p>
+                    ESCREVA 5 COISAS QUE VOCÊ MAIS VALORIZA NA VIDA.
+                    <div style="display: flex; width: 80%; margin-left: 5%;  justify-content: space-between;">
+                        <div style="display: flex; border-bottom: 1px solid black; width: 100%;">
+                            &nbsp;
+                        </div>
+                    </div>
+                    <div style="display: flex; width: 80%; margin-left: 5%;  justify-content: space-between;">
+                        <div style="display: flex; border-bottom: 1px solid black; width: 100%;">
+                            &nbsp;
+                        </div>
+                    </div>
+                    <div style="display: flex; width: 80%; margin-left: 5%;  justify-content: space-between;">
+                        <div style="display: flex; border-bottom: 1px solid black; width: 100%;">
+                            &nbsp;
+                        </div>
+                    </div>
+                </p>
+
+                <p>
+                    DAS COISAS QUE LISTOU, ESCREVA A QUE VOCÊ MAIS VALORIZA.
+                    <div style="display: flex; width: 80%; margin-left: 5%;  justify-content: space-between;">
+                        <div style="display: flex; border-bottom: 1px solid black; width: 100%;">
+                            &nbsp;
+                        </div>
+                    </div>
+                    <div style="display: flex; width: 80%; margin-left: 5%;  justify-content: space-between;">
+                        <div style="display: flex; border-bottom: 1px solid black; width: 100%;">
+                            &nbsp;
+                        </div>
+                    </div>
+                    <div style="display: flex; width: 80%; margin-left: 5%;  justify-content: space-between;">
+                        <div style="display: flex; border-bottom: 1px solid black; width: 100%;">
+                            &nbsp;
+                        </div>
+                    </div>
+                </p>
+
+                <p style="font-weight: bold; text-indent: 0 !important; text-align: center;">
+                    PAISAGEM (CECÍLIA MORAES)
+                </p>
+                <p align="justify" style="font-weight: bold; margin-left: 5%;">
+                    PELA JANELA ABERTA, EU VEJO LÁ EMBAIXO UMA CURVA DE CAMINHO ABANDONADO. FAZ MUITO SOL. É MEIO-DIA. PARECE QUE O CÉU ESTÁ MUITO CANSADO, QUE AS ÁRVORES ESTÃO CANSADAS E QUE O RIOZINHO QUE PASSA AO LONGE, DE TÃO CANSADO, SE ESQUECE DE CORRER...
+                </p>
+                <p align="justify" style="font-weight: bold; margin-left: 5%;">
+                    OS PÁSSAROS MOVEM-SE LENTAMENTE NO AR.
+                    OUVE-SE UM CANTO MONÓTONO DE GALOS DISTANTES...
+                    NA CURVA DO CAMINHO ABANDONADO, UM VENDEDOR DE FRUTAS ADORMECEU, COM O CESTO TRANSBORDANTE DE LARANJAS
+                </p>
+                <p align="justify" style="font-weight: bold; margin-left: 5%;">
+                    E OS PARDAIS ANDAM-LHE AO REDOR, E OS BESOUROS E AS BORBOLETAS...    
+                </p>
+                <p align="justify" style="font-weight: bold; margin-left: 5%;">
+                    E O VENDEDOR DE FRUTAS PARECE FELIZ, SONHANDO, QUE AS BORBOLETAS, OS BESOUROS, OS PARDAIS FAZEM-SE AINDA MAIS LEVES, PARA NÃO DESPERTAREM O VENDEDOR DE FRUTAS...
+                </p>
+                <p style="text-indent: 0 !important; margin: 5%;">
+                    <b>COMPREENSÃO DA LEITURA</b> (faça oralmente, após a leitura em voz alta)</br>
+                    - Quem escreveu o conto?</br>
+                    - O conto inicia com a personagem descrevendo um cenário. O que ela vê da sua janela?</br>
+                    - Quem é ela vê na curva? </br>
+                    - Ele está rodeado por quem?</br>
+                    - Ele sonha com que?</br>
+                    - O que os pardais, besouros e borboletas fazem para não acordar o vendedor de fruta?</br> 
+                </p>
+
+                <p>
+                    Marque no texto as palavras que você já sabe ler.
+                </p>
+                <p>
+                    Copie as palavras que você marcou no seu caderno.<br/><br/><br/>
+                </p>
+                <p style="text-indent: 0 !important; margin-left: 5%;">
+                    - O que você vê da sua janela? (escreva no quadro a história do aluno e depois trabalhe com ela).<br/>
+                    - Da minha janela eu vejo...
+                    <div style="display: flex; width: 80%; margin-left: 5%;  justify-content: space-between;">
+                        <div style="display: flex; border-bottom: 1px solid black; width: 100%;">
+                            &nbsp;
+                        </div>
+                    </div>
+                    <div style="display: flex; width: 80%; margin-left: 5%;  justify-content: space-between;">
+                        <div style="display: flex; border-bottom: 1px solid black; width: 100%;">
+                            &nbsp;
+                        </div>
+                    </div>
+                    <div style="display: flex; width: 80%; margin-left: 5%;  justify-content: space-between;">
+                        <div style="display: flex; border-bottom: 1px solid black; width: 100%;">
+                            &nbsp;
+                        </div>
+                    </div>
+                </p>
+
+                <p>
+                    Divida a palavra “PAISAGEM”, quantas sílabas contém?
+                    <div style="border: 3px solid orange; width: 5%; height: 3rem; margin-left: 5%;">
+                    </div>
+                </p>
+
+                <p style="text-indent: 0 !important; margin-left: 5%;">
+                    Paisagem rima com
+                    <table border="1px" width="80%" style="margin-left: 5%;">
+                        <tr>
+                            <td style="width: 50%;"><b>MARG</b></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td><b>VIA</b></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td><b>MENSA</b></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td><b>FOLHA</b></td>
+                            <td></td>
+                        </tr>
+                    </table>
+                </p>
+
+                <p style="text-indent: 0 !important; margin-left: 5%;">
+                    Quem vende...
+                    <table border="1px" width="80%" style="margin-left: 5%;">
+                        <tr>
+                            <td style="width: 50%;"><b>JORNAL</b></td>
+                            <td>Jornaleiro</td>
+                        </tr>
+                        <tr>
+                            <td><b>LIVRO</b></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td><b>PIPOCA</b></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td><b>VERDURA</b></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td><b>PÃO</b></td>
+                            <td></td>
+                        </tr>
+                    </table>
+                </p>
+
+
+                <p style="text-indent: 0 !important; margin-left: 5%;">
+                    O lugar onde vende...
+                    <table border="1px" width="80%" style="margin-left: 5%;">
+                        <tr>
+                            <td style="width: 50%;"><b>FRUTA</b></td>
+                            <td>Frutaria</td>
+                        </tr>
+                        <tr>
+                            <td><b>LIVRO</b></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td><b>PÃO</b></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td><b>SAPATO</b></td>
+                            <td></td>
+                        </tr>
+                    </table>
+                </p>
+
+
+                <p>
+                    Leia
+                </p>
+                <p>
+                    JANELA
+                </p>
+                <p>
+                    Substitua o <b>J</b>  por <b>P</b>. Copie a palavra que formou.
+                    <div style="border: 1px solid black; width: 80%; height: 4rem; margin-left: 5%;">
+
+                    </div>
+                </p>
+
+                <p>
+                    Substitua o <b>J</b>  por <b>C</b>. Copie a palavra que formou.
+                    <div style="border: 1px solid black; width: 80%; height: 4rem; margin-left: 5%;">
+
+                    </div>
+                </p>
+
             </div>
         </div>
         <div class="row" id="btn-imprimir" onclick="imprimeConteudo()">
