--- a/conteudo/unidadepalavra/1.html
+++ b/conteudo/unidadepalavra/1.html
@@ -2403,25 +2403,321 @@
                             </table>
                     </tr>
                 </table>
+                <p>
+                    &nbsp;
+                </p>
+
+
+
+
+
+                <table border="1px" width="80%" style="margin-left: 5%;">
+                    <p>HIGIENE PESSOAL</p>
+                    <tr>
+                        <td width="50%">
+                            <center>
+                                <img src="../img/desodorante-celula.PNG"  height="150rem" alt="">
+                            </center>
+                        </td>
+                        <td>
+                            <table width="100%">
+                                <tr>
+                                    <td>
+                                        <p style="text-align: center;">DESODORANTE COTONETE SABONETE</p>
+                                    </td>
+                                </tr>
+                                <tr style="border-top: 1px solid black;">
+                                    <td>
+                                        <p class="centraliza">Copie:</p>
+                                    </td>
+                                </tr>
+                            </table>
+                    </tr>
+                    <tr>
+                        <td width="50%">
+                            <center>
+                                <img src="../img/sabonete-celula.png"  height="150rem" alt="">
+                            </center>
+                        </td>
+                        <td>
+                            <table width="100%">
+                                <tr>
+                                    <td>
+                                        <p style="text-align: center;">SABONETE	  CREME DENTAL	COTONETE</p>
+                                    </td>
+                                </tr>
+                                <tr style="border-top: 1px solid black;">
+                                    <td>
+                                        <p class="centraliza">Copie:</p>
+                                    </td>
+                                </tr>
+                            </table>
+                    </tr>
+                    <tr>
+                        <td width="50%">
+                            <center>
+                                <img src="../img/desodorante-cotonete-celula.PNG"  height="150rem" alt="">
+                            </center>
+                        </td>
+                        <td>
+                            <table width="100%">
+                                <tr>
+                                    <td>
+                                        <p style="text-align: center;">DESODORANTE	COTONETE	SABONETE</p>
+                                    </td>
+                                </tr>
+                                <tr style="border-top: 1px solid black;">
+                                    <td>
+                                        <p class="centraliza">Copie:</p>
+                                    </td>
+                                </tr>
+                            </table>
+                    </tr>
+                    <tr>
+                        <td width="50%">
+                            <center>
+                                <img src="../img/cotonete-sabonete-celula.PNG"  height="150rem" alt="">
+                            </center>
+                        </td>
+                        <td>
+                            <table width="100%">
+                                <tr>
+                                    <td>
+                                        <p style="text-align: center;">COTONETE	SABONETE	ABSORVENTE</p>
+                                    </td>
+                                </tr>
+                                <tr style="border-top: 1px solid black;">
+                                    <td>
+                                        <p class="centraliza">Copie:</p>
+                                    </td>
+                                </tr>
+                            </table>
+                    </tr>
+                    <tr>
+                        <td width="50%">
+                            <center>
+                                <img src="../img/cotonete-creme-dental-celula.PNG"  height="150rem" alt="">
+                            </center>
+                        </td>
+                        <td>
+                            <table width="100%">
+                                <tr>
+                                    <td>
+                                        <p style="text-align: center;">COTONETE	CREME DENTAL SABONETE</p>
+                                    </td>
+                                </tr>
+                                <tr style="border-top: 1px solid black;">
+                                    <td>
+                                        <p class="centraliza">Copie:</p>
+                                    </td>
+                                </tr>
+                            </table>
+                    </tr>
+                    <tr>
+                        <td width="50%">
+                            <center>
+                                <img src="../img/sabonete-papel.PNG"  height="150rem" alt="">
+                            </center>
+                        </td>
+                        <td>
+                            <table width="100%">
+                                <tr>
+                                    <td>
+                                        <p style="text-align: center;">SABONETE	PAPEL HIGIÊNICO	ABSORVENTE</p>
+                                    </td>
+                                </tr>
+                                <tr style="border-top: 1px solid black;">
+                                    <td>
+                                        <p class="centraliza">Copie:</p>
+                                    </td>
+                                </tr>
+                            </table>
+                    </tr>
+                </table>
 
 
 
 
 
 
+                <table border="1px" width="80%" style="margin-left: 5%;">
+                    <p>LIMPEZA</p>
+                    <tr>
+                        <td width="50%">
+                            <center>
+                                <img src="../img/sabao-celula.png"  height="150rem" alt="">
+                            </center>
+                        </td>
+                        <td>
+                            <table width="100%">
+                                <tr>
+                                    <td>
+                                        <p style="text-align: center;">SABÃO  DETERGENTE DESINFETANTE</p>
+                                    </td>
+                                </tr>
+                                <tr style="border-top: 1px solid black;">
+                                    <td>
+                                        <p class="centraliza">Copie:</p>
+                                    </td>
+                                </tr>
+                            </table>
+                    </tr>
+                    <tr>
+                        <td width="50%">
+                            <center>
+                                <img src="../img/palha-de-acao-celula.png"  height="150rem" alt="">
+                            </center>
+                        </td>
+                        <td>
+                            <table width="100%">
+                                <tr>
+                                    <td>
+                                        <p style="text-align: center;">PALHA DE AÇO  SABÃO  DETERGENTE</p>
+                                    </td>
+                                </tr>
+                                <tr style="border-top: 1px solid black;">
+                                    <td>
+                                        <p class="centraliza">Copie:</p>
+                                    </td>
+                                </tr>
+                            </table>
+                    </tr>
+                    <tr>
+                        <td width="50%">
+                            <center>
+                                <img src="../img/sabao-desinfetante-celula.png"  height="150rem" alt="">
+                            </center>
+                        </td>
+                        <td>
+                            <table width="100%">
+                                <tr>
+                                    <td>
+                                        <p style="text-align: center;">SABÃO DESINFETANTE PALHA DE AÇO</p>
+                                    </td>
+                                </tr>
+                                <tr style="border-top: 1px solid black;">
+                                    <td>
+                                        <p class="centraliza">Copie:</p>
+                                    </td>
+                                </tr>
+                            </table>
+                    </tr>
+                    <tr>
+                        <td width="50%">
+                            <center>
+                                <img src="../img/desinfetante-palha-de-acao-celula.png"  height="150rem" alt="">
+                            </center>
+                        </td>
+                        <td>
+                            <table width="100%">
+                                <tr>
+                                    <td>
+                                        <p style="text-align: center;">DESINFETANTE PALHA DE AÇO SABÃO</p>
+                                    </td>
+                                </tr>
+                                <tr style="border-top: 1px solid black;">
+                                    <td>
+                                        <p class="centraliza">Copie:</p>
+                                    </td>
+                                </tr>
+                            </table>
+                    </tr>
+                </table>
+                <p>
+                    &nbsp;
+                </p>
+                <p>
+                    &nbsp;
+                </p>
+
+                <p><b>AS PALAVRAS TAMBÉM NOMEIAM SENTIMENTOS E REAÇÕES</b></p>
+                <p style="text-indent: 0 !important; margin-left: 5%;">
+                    Escreva 5 palavras que correspondam à ideia solicitada.
+                    <table border="1px" width="80%" style="margin-left: 5%;">
+                        <tr>
+                            <td style="width: 50%;">&nbsp;</td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td style="width: 50%;">&nbsp;</td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td style="width: 50%;">&nbsp;</td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td style="width: 50%;">&nbsp;</td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td style="width: 50%;">&nbsp;</td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td style="width: 50%;">&nbsp;</td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td style="width: 50%;">&nbsp;</td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td style="width: 50%;">&nbsp;</td>
+                            <td></td>
+                        </tr>
+                    </table>
+                </p>
 
 
+                <p>
+                    3 - Complete a cruzadinha com palavra que representa o desenho
+                    <center>
+                        <img src="../img/cruzadinha.png" width="50%" alt="">
+                    </center>
+                </p>
+
+                <p>
+                    2- Complete a cruzadinha com os nomes a seguir:
+                    <center>
+                        <img src="../img/cruzadinha2.png" width="50%" alt="">
+                    </center>
+                </p>    
+
+                <p>
+                    &nbsp;
+                </p>
+                <p>
+                    &nbsp;
+                </p>
 
 
+                <p style="text-indent: 0 !important; margin-left: 5%;">
+                    <b>AS COISAS QUE EU GOSTO</br>
+                    COSTUMAMOS FAZER, NO NOSSO DIA-A-DIA, COISAS QUE NOS AGRADAM E DESAGRADAM.</br>
+                    AH! SE PUDÉSSEMOS FAZER SEMPRE SÓ O QUE NOS AGRADA!
+                    ESCREVA NA PRIMEIRA COLUNA AS COISAS QUE LHE DÃO PRAZER DE FAZER, NA SEGUNDA AS QUE LHE DESAGRADAM E NA TERCEIRA AS QUE VOCÊ GOSTARIA DE FAZER SEMPRE, MAS NÃO PODE.</br>
+                    <center>
+                        <img src="../img/as-coisas-que-eu-gosto.png" alt="" width="50%">
+                    </center>
+                    </b>
+                </p>
 
-
-
-
-
-
-
-
-
+                <p style="padding-left: 5%;" align="justify">
+                    <b>ATIVIDADES DE LEITURA DE FRASES</b>
+                </p>
+                <p style="padding-left: 5%;" align="justify">
+                    Embora as frases não sejam consideradas como unidades que não correspondem aos textos do mundo real, durante o processo inicial de leitura e escrita, as frases devem ser encaradas como uma oportunidade para o aluno verificar como as palavras escritas se encadeiam nas relações que definem os planos sintáticos e semânticos.
+                </p>
+                <p style="padding-left: 5%;" align="justify">
+                    A leitura de frases promove a capacidade inicial do aluno para processar a língua escrita, em lugar de ler e compreender palavras isoladas. O desafio de <b>ordenação</b> de frases de um texto curto, por exemplo, onde as mesmas apareçam embaralhadas, é outra modalidade em que a leitura de frases já fica subordinada à construção de um sentido global para a composição de um texto coerente.
+                </p>
+                <p style="padding-left: 5%;" align="justify">
+                    Esta atividade permite a experiência do alfabetizando conseguir ler e escrever com a sua ajuda textos completos. A motivação e o prazer que esta atividade implica é bastante valioso e significativo.  
+                </p>
+                <p style="padding-left: 5%;" align="justify">
+                    As atividades de escrita de palavras (e de frases) são também <b>atividades de leitura,</b>. porque, enquanto o aluno vai construindo as notações, ele tende a reler o que já escreveu. Portanto, escrever também funciona como exercício para o desenvolvimento da capacidade de correspondência letra-som durante o processo de leitura. Os alunos devem ser estimulados a usufruir dessa reflexão, de que necessitam sempre reler o que escrevem.
+                </p>
 
 
 
