--- a/conteudo/unidadepalavra/1.html
+++ b/conteudo/unidadepalavra/1.html
@@ -63,8 +63,8 @@
         }
 
         .container-fluid {
-            /* display: none; */
-            display: block;
+            display: none;
+            /* display: block; */
         }
 
         .atividade {
@@ -170,9 +170,9 @@
 </head>
 
 <body>
-    <!-- <div class="atividade" onmouseover="ApareceTexto()" onmouseout="DesapareceTexto()" onclick="recarrega()">
+    <div class="atividade" onmouseover="ApareceTexto()" onmouseout="DesapareceTexto()" onclick="recarrega()">
         <h2>Atividades</h2>
-    </div> -->
+    </div>
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-12 col-xs-12 col-lg-12 col-md-12 mark text-center">
